syntax = "proto3";



service MainFunctions{
    rpc login(Credentials) returns (OperationResponse) {}
    rpc logout(Credentials) returns (OperationResponse) {}
    rpc search(Credentials) returns (OperationResponse) {}
    rpc index(Credentials) returns (OperationResponse) {}
}

//estos van a 

//Este es el request de logn del cliente
message Credentials{
    string peerName = 1;
    string puertoPservidor = 2;
    repeated string fileName = 3;
}

//La respuesta del servidor
message OperationResponse{
    string serverResponse = 1;
}


